--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@
 server.servlet.context-path=/workintech
 server.port=9000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5434/postgres
 spring.datasource.username=postgres
-spring.datasource.password=changeme
+spring.datasource.password=38241719
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=Debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
